--- a/src/components/Navigation/ToolBar/ToolBar.css
+++ b/src/components/Navigation/ToolBar/ToolBar.css
@@ -1,16 +1,17 @@
 .ToolBar{
-    height: 56px;
+    height: 80px;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #dfdfdf;
+    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
-    z-index: 90;
+    padding: 0 100px;
+    z-index: 9999;
     box-sizing: border-box;
+    box-shadow: 0px 3px 10px 0px rgba(112, 112, 112, 0.274);
 }
 .ToolBar nav{
     height: 100%;
