--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -1,3 +1,8 @@
 .Content{
     margin-top: 80px;
+    height: calc(100vh - 80px);
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
