added redux store - auth action creator, auth reducer

--- a/src/container/Login.css
+++ b/src/container/Login.css
@@ -6,6 +6,10 @@
   flex-direction: column;
 }
 
+.Login h1{
+  color:#727272;
+}
+
 .Login input, button{
   min-height: 50px;
   margin: 15px auto;
