--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -1,20 +1,16 @@
 .Modal {
     position: fixed;
-    z-index: 500;
-    background-color: white;
-    width: 70%;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px black;
-    padding: 16px;
-    left: 15%;
-    top: 30%;
+    min-height: 80px;
+    background-color: #F24E33;
+    color: white;
+    width: 100%;
+    border: 1px solid #F24E33;
+    padding: 30px;
+    left: 0;
+    top: 0;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
+    z-index: 9999;
+    text-align: center;
 }
 
-@media (min-width: 600px) {
-    .Modal {
-        width: 500px;
-        left: calc(50% - 250px);
-    }
-}
