--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -1,88 +1,99 @@
 .ToolsItems{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    align-items: center;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	align-items: center;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+:global #google_translate_element{
+	margin-left: 15px;
+}
+:global #google_translate_element span{
+	display: none
+}
+:global #google_translate_element .goog-te-gadget{
+	color: white;
 }
 
 select{
-    width: 112px;
-    height: 32px;
-    margin-left: 25px;
-    border: 1px solid rgba(63, 63, 63, 0.555);
-    color: rgba(63, 63, 63, 0.555);
-    padding: 0 10px;
-    border-radius: 3px;
+	width: 112px;
+	height: 32px;
+	border: 1px solid rgba(63, 63, 63, 0.555);
+	color: rgba(63, 63, 63, 0.555);
+	padding: 0 10px;
+	border-radius: 3px;
+	transform: translateY(7px)
 }
 
 @media (min-width:500px){
-    .ToolsItems{
-        flex-direction: row;
-    }
+	.ToolsItems{
+		flex-direction: row;
+	}
 }
 
 .ButtonInfo{
-    background: #77779D;
-    min-height: 32px;
-    margin: 0 20px;
-    width: 120px;
-    border: 1px solid #77779D;
-    border-radius: 3px;
-    font-size: 18px;
-    outline: none;
-    font-size: 14px;
-    color: white;
-    position: relative;
+	background: #77779D;
+	min-height: 32px;
+	margin: 0 20px;
+	width: 120px;
+	border: 1px solid #77779D;
+	border-radius: 3px;
+	font-size: 18px;
+	outline: none;
+	font-size: 14px;
+	color: white;
+	position: relative;
 }
-  
-.ButtonInfo:hover .TooltipContent {
-    display: block;
-    animation: tooltip 0.7s ease forwards;
-  }
-  .TooltipContent {
-    display: none;
-    background: white;
-    color: black;
-    opacity: 0;
-    position: absolute;
-    bottom: -100px;
-    left: -180px;
-    transform: translateY(50%);
-    width: 100%;
-    max-width: 350px;
-    min-width: 300px;
-    padding: 5px;
-    border: 1px solid #e9e9e9;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.15);
-  }
-  .TooltipArrow {
-    position: absolute;
-    z-index: 1;
-    top: -15px;
-    left: 90%;
-    transform: translateX(0) rotate(180deg);
-    width: 20px;
-    height: 25px;
-    overflow: hidden;
-  }
-  .TooltipArrow:before {
-    content: '';
-    position: absolute;
-    top: -4px;
-    left: 50%;
-    width: 20px;
-    height: 20px;
-    background-color: #fff;
-    transform: translateX(-50%) rotate(45deg);
-    box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.1);
-  }
 
-  @keyframes tooltip {
-    100% {
-      opacity: 1;
-      bottom: -60px;
-    }
-  }
+.ButtonInfo:hover .TooltipContent {
+	display: block;
+	text-align: left;
+	padding: 15px;
+	animation: tooltip 0.7s ease forwards;
+}
+.TooltipContent {
+	display: none;
+	background: white;
+	color: black;
+	opacity: 0;
+	position: absolute;
+	bottom: -100px;
+	left: -180px;
+	transform: translateY(50%);
+	width: 100%;
+	max-width: 350px;
+	min-width: 300px;
+	padding: 5px;
+	border: 1px solid #e9e9e9;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.15);
+}
+.TooltipArrow {
+	position: absolute;
+	z-index: 1;
+	top: -15px;
+	left: 90%;
+	transform: translateX(0) rotate(180deg);
+	width: 20px;
+	height: 25px;
+	overflow: hidden;
+}
+.TooltipArrow:before {
+	content: '';
+	position: absolute;
+	top: -4px;
+	left: 50%;
+	width: 20px;
+	height: 20px;
+	background-color: #fff;
+	transform: translateX(-50%) rotate(45deg);
+	box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.1);
+}
+
+@keyframes tooltip {
+	100% {
+		opacity: 1;
+		bottom: -140px;
+	}
+}
