--- a/src/container/DoorsConstructor/DoorsConstructor.css
+++ b/src/container/DoorsConstructor/DoorsConstructor.css
@@ -7,4 +7,14 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  max-width: 600px;
+  border: 1px solid #E6E6E6;
 }
+
+.SizeView{
+  height: 20px;
+  padding: 0 10px;
+  border: 1px solid #5A5858;
+  margin: 0 20px;
+}
+
