--- a/src/container/DoorsConstructor/DoorOptions/DoorOptions.css
+++ b/src/container/DoorsConstructor/DoorOptions/DoorOptions.css
@@ -28,11 +28,6 @@
   margin-right: 5px;
 }
 
-.CommonSize div{
-  display: flex;
-  justify-content: space-between;
-}
-
 .CommonSize div input{
   margin-left: 5px;
   height: 20px;
@@ -40,4 +35,9 @@
   padding: 0 2px;
   color: #848C93;
   font-size: 14px;
+}
+
+.DoorOptionsButtons{
+  display: flex;
+  flex-direction: row;
 }
