--- a/src/container/Login/Login.css
+++ b/src/container/Login/Login.css
@@ -11,7 +11,7 @@
   color:#727272;
 }
 
-.Login input, button{
+.Login input,.Login button{
   min-height: 50px;
   margin: 15px auto;
   width: 100%;
